styles/desktop.css
/* ... */
body{
    font-family: 'Roboto';
    color: var(--black);
    background: var(--white);
}

.heading{
    font-size: 48px;
    font-weight: 400;
    line-height: 56px;
    font-family: 'Montserrat';
    text-transform: uppercase;
}
.small-text{
    font-size: 12px;
    font-weight: 400;
    line-height: 14px;
}

.normal-text{
    font-size: 16px;
    font-weight: 400;
    line-height: 19px;
}

.big-text{
    font-size: 18px;
    font-weight: 400;
    line-height: 21px;
}

.accent{
    color: var(--accent);
}

.bold{
    font-weight: 700;
}

.grey{
    color: var(--grey);
}

.main-page{
    display: flex;
    flex-direction: column;
    gap: 50px;
    padding: 0 calc((100% * 0.15)/2);
    padding-bottom: 20px;
}

/* HEADER */

.burger-container{
    visibility: hidden;
    position: absolute;
    display: flex;
    justify-content: end;
}
.burger-nav-menu{
    padding: 20px 40px 40px 40px;
    width: 100vw;
    display: flex;
    box-sizing: border-box;
    border: 2px solid var(--accent);
    position: absolute;
    background: var(--white);
    transition: 0.7s;
    top: 0;
    left: -100%;
    z-index: 2;
}
.burger{
    background: var(--white);
    border: 2px solid var(--accent);
    display: flex;
    flex-direction: column;
    width: 44px;
    height: 44px;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    transition: 1s;
    position: relative;
    z-index: 5;
}

.burger:before,
.burger:after{
    content: '';
    width: 22px;
    height: 2px;
    transition: .5s;
    border-radius: 100px;
    background: var(--black);
    position: absolute;
}
.burger:before{
    top: 17px;
}
.burger:after{
    bottom: 17px;
}
.burger.active:before{
    transform: rotate(-45deg);
    top: 21px;
}
.burger.active:after{
    transform: rotate(45deg);
    bottom: 21px;
}
.burger-nav-menu.active{
    left: 0;
}
.burger-nav{
    display: flex;
    flex-direction: column;
    gap: 15px;
}
.burger-nav-items{
    display: flex;
    flex-direction: column;
    gap: 30px;
}
.burger-nav-item{
    display: flex;
    gap: 10px;
}

.header{
    display: flex;
}

.logo-container{
    height: 150px;
}
.logo{
    border-radius: 0px 0px 10px 10px;
    height: 100%;
}
.navigation{
    margin-top: 20px;
    width: 100%;
}

.navigation-row{
    display: flex;
    margin-top: 30px;
    justify-content: end;
    align-items: center;
    gap: 60px;
    user-select: none;
}

.nav-item{
    display: flex;
    align-items: center;
    cursor: pointer;
    transition: 0.5s;
}

.nav-item:hover,
.nav-item a:hover{
    color: var(--accent);
}

.nav-item a,
a.nav-item{
    color: var(--black);
    transition: 0.5s;
}

.icon{
    display: flex;
    margin-right: 10px;
    align-items: center;
    cursor: auto;
}

.separator{
    width: 1px;
    height: 17px;
    background: var(--grey);
    border-radius: 10px;
    cursor: auto;
}

/* SLIDER */

.slides-list-container{
    display: flex;
    flex-direction: column;
    gap: 50px;
}

.slider-buttons{
    min-width: 60px;
    height: 60px;
    background: transparent;
    border-radius: 10px;
    display: block;
    border: 2px solid var(--accent);
}
.slider-container{
    display: flex;
    gap: 40px;
    width: 100%;
    align-items: center;
    justify-content: center;
}
.slider{
    display: flex;
    align-items: center;
    align-self: stretch;
    overflow: hidden;
    width: 100%;
}
.slides{
    display: flex;
    position: relative;
    transition: 1s;
    left: 0;
    width: max-content;
    align-self: stretch;
    width: 100%;
}
.slide{
    display: flex;
    min-width: 100%;
    box-sizing: border-box;
    padding: 0 15px;
}
.content{
    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: space-between;
}
.line{
    background: var(--accent);
    width: 195px;
    height: 4px;
    border-radius: 100px;
    margin: 20px 0 40px 0;
}

.slide-text{
    width: 22vw;
}

.slide-item{
    display: flex;
    flex-direction: column;
    gap: 30px;
}
.slide-item-button{
    display: flex;
    width: 100%;
    justify-content: end;
}

.slide-image-container{
    display: flex;
}

.slide-image{
    width: 45vw;
    height: 500px;
    border-radius: 10px;
    position: relative;
    overflow: hidden;
}

.slide-image img{
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

/* BAKERY MENU */

.bakery-menu{
    width: 100%;
    display: flex;
    flex-direction: column;
}

.bakery-menu-list{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 30px;
    align-self: center;
}

.bakery-menu-item{
    display: flex;
    flex-direction: column;
    gap: 20px
}

.bakery-menu-item-image{
    width: 380px;
    height: 370px;
    position: relative;
    overflow: hidden;
    border-radius: 10px;
}

.bakery-menu-item-image img{
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    transition: 1.2s;
}

.bakery-menu-item-image img:hover{
    scale: 1.1;
}


/* CONTACTS */

.contacts-container{
    display: flex;
    justify-content: end;
}

.contacts{
    margin-top: 80px;
    display: flex;
    justify-content: end;
    flex-direction: column;
    gap: 20px;
    align-items: end;
}

.instagram{
    border-radius: 5px;
    border: 2px solid var(--accent);
    padding: 9px 12px;
    display: flex;
    flex-direction: row;
    gap: 15px;
    align-items: center;
    width: min-content;
}

a.instagram{
    color: var(--black);
}

/* BAKERY MENU */

.path{
    display: flex;
    gap: 10px;
    align-items: center;
    user-select: none;
}

.path a:hover{
    text-decoration: underline;
}

.square{
    width: 4px;
    height: 4px;
    background: #FDA941;
    border-radius: 10px;
}

.about-company-text{
    display: flex;
    flex-direction: column;
    gap: 40px;
    width: 600px;
}

.checkout-button{
    display: flex;
    flex-direction: column;
    gap: 20px;
}
/* ... */

